index.html updated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 	<head>Git Demo</head>
-	<body>Git Demo Running On Ubuntu</body>
+	<body>Git Demo Running On Ubuntu instance </body>
 </html>
 
